# roundabout

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md
benches/: event_bus_bench.rs  message_bus_bench.rs  runtime_bench.rs
examples/: blocking.rs  group.rs  ping_pong_concurrent.rs  ping_pong_sequential.rs  primary_thread.rs
src/: event.rs  handler.rs  lib.rs  message.rs  prelude.rs  schedule.rs  util.rs  wait.rs
src/event/: buffer.rs  bus.rs  vec.rs
src/message/: buffer.rs  bus.rs  vec.rs
src/util/: cpu.rs  triple.rs
