[package]
name = "roundabout"
version = "0.1.0"
authors = ["Timo Merlin Zint"]
edition = "2018"
description = "An message oriented concurrent runtime"
readme = "README.md"
homepage = "https://github.com/tmzint/roundabout/"
repository = "https://github.com/tmzint/roundabout/"
license = "MIT OR Apache-2.0"
keywords = ["concurrency", "message", "bus", "queue"]
categories = ["asynchronous", "concurrency"]

#[profile.dev]
#opt-level = 0

[profile.release]
opt-level = 3
lto = true
incremental = false
#panic = 'abort'
codegen-units = 1
debug = true
# use Xargo


[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
#incremental = false

[dependencies]
ahash = "^0.7"
indexmap = "^1.5"
log = "^0.4"
core_affinity = "^0.5"
static_assertions = "^1.1"
parking_lot = "^0.11"

[dev-dependencies]
criterion = "^0.3"
ctrlc = { version = "^3.1", features = ["termination"] }

[[bench]]
name = "message_bus_bench"
harness = false

[[bench]]
name = "runtime_bench"
harness = false
